# plagiarism

./: .gitignore  Bert_Plagiarism_multilang.ipynb  README.md  requirements.txt
cosineSimilarity/: a1.txt  app.py  john.txt  juma.txt
plagiarism_server/: .gitignore  Cargo.toml  requirements.txt
plagiarism_server/src/: main.rs
plagiarism_service/: pom.xml
plagiarism_service/src/main/java/kravchenko/danylo/plagiarism/controller/: IndexController.java  PlagiarismController.java
plagiarism_service/src/main/java/kravchenko/danylo/plagiarism/dto/: PlagiarismRequestItem.java  PlagiarismResponseItem.java  PlagiarismReview.java
plagiarism_service/src/main/java/kravchenko/danylo/plagiarism/service/: PlagiarismService.java
plagiarism_service/src/main/resources/: application.properties
plagiarism_service/src/main/resources/static/: app.js  main.css
plagiarism_service/src/main/resources/templates/: index.html
research/: Bert_Plagiarism_multilang.ipynb
src/: main.rs  models.rs
translation/: .gitignore  requirements.txt  translate.py
translation/plagiarism_data/: corpus.csv
